# AliasFinder

./: .gitignore  .wget-hsts  CMakeLists.txt  README.md  build.sh  lrybuild.sh
include/Stat/: CFGStat.h
include/framework/: ASTElement.h  ASTManager.h  Common.h
lib/: CMakeLists.txt
lib/Alias/: CMakeLists.txt
lib/Stat/: CFGStat.cpp
lib/framework/: ASTManager.cpp  Common.cpp
tests/Arraybound/: README.md  config.txt
tests/Arraybound/IntraCheck/: example.cpp
tests/Arraybound/hwtest/bof/: TestCase.h
tests/Arraybound/hwtest/bof/test1/: Buff_OverFlow_TestCase1.cpp
tests/Arraybound/hwtest/bof/test10/: Buff_OverFlow_TestCase10.cpp
tests/LoopUpbound/: astList.txt  config.txt  linux_x86.mk  linux_x86.sh
tests/LoopUpbound/src/: TestCase.c  TestCase.h
tests/LoopUpbound/src/BigLoop_Check/: BigLoop_Check_TestCase1.1.c  BigLoop_Check_TestCase1.c  BigLoop_Check_TestCase2.1.c  BigLoop_Check_TestCase2.c  BigLoop_Check_TestCase3.c  BigLoop_Check_TestCase4.c  BigLoop_Check_TestCase5.c  BigLoop_Check_TestCase6.cpp  BigLoop_Check_TestCase7.1.cpp  BigLoop_Check_TestCase7.cpp  BigLoop_Check_TestCase8.1.cpp  BigLoop_Check_TestCase8.cpp
tests/RedundantJudgement/: RJ_test.cpp  astList.txt  config.txt  div0.cpp  multi_call.cpp  specific_target_config.toml  specific_test.cpp
tests/TemplateChecker/: README.md  config.txt  example.cpp
tests/taint-check/: README.md  astList.txt  config.txt  coreutils.xml  linux_x86.mk  time.txt
tests/taint-check_FieldSensitive/: basic.cpp  call.cpp  nest.cpp  taintConfig.txt
tools/AliasFinder/: CMakeLists.txt  main.cpp
(+10 files in other folders)
