# add_subdirectory(solver)
# add_subdirectory(checkers)
# add_subdirectory(P2A)
# add_subdirectory(taint-check)
# add_subdirectory(xml)
add_subdirectory(framework)
add_subdirectory(Stat)

# file (GLOB SOURCES             
#         framework/*.cpp
#         Stat/*.cpp)

# add_library(Statistic ${SOURCES})